--- a/ExpoSoftware/appsettings.json
+++ b/ExpoSoftware/appsettings.json
@@ -9,7 +9,7 @@
 "AllowedHosts": "*",
 
 "ConnectionStrings": {
-  "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ExpoSoftware;Trusted_Connection = True; MultipleActiveResultSets = true"
+  "DefaultConnection": "Server=tcp:server-expo.database.windows.net,1433;Initial Catalog=ExpoSoftware;Persist Security Info=False;User ID=administrador;Password=Exposoftware2020;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
 
 }
