--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+ <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    
   </ItemGroup>
 
   <ItemGroup>
