--- a/ExpoSoftware/appsettings.json
+++ b/ExpoSoftware/appsettings.json
@@ -1,12 +1,15 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*",
+    }
+  },
+  "AppSettings": {
+    "Key": "E1x5jrr0tlwcppo8^7cmo04golinu7wc0%4cloim&(fr3s1+cwuC"
+  },
+  "AllowedHosts": "*",
 
   "ConnectionStrings": {
 
