--- a/ExpoSoftware/appsettings.json
+++ b/ExpoSoftware/appsettings.json
@@ -10,7 +10,10 @@
 
 "ConnectionStrings": {
   
-  "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ExpoSoftware;Trusted_Connection = True; MultipleActiveResultSets = true"
+  "DefaultConnection": "Server=tcp:server-expo.database.windows.net,1433;Initial Catalog=ExpoSoftwareNuevo;Persist Security Info=False;User ID=administrador;Password=Exposoftware2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+
+
+
 
 }
 
