--- a/ExpoSoftware/ClientApp/package.json
+++ b/ExpoSoftware/ClientApp/package.json
@@ -29,8 +29,10 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "ngx-filesaver": "^9.0.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.5",
