--- a/ExpoSoftware/ClientApp/package.json
+++ b/ExpoSoftware/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "9.1.1",
     "@angular/platform-server": "9.1.1",
     "@angular/router": "9.1.1",
+    "@aspnet/signalr": "^1.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
