--- a/ExpoSoftware/appsettings.json
+++ b/ExpoSoftware/appsettings.json
@@ -13,7 +13,7 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ExpoSoftware;Trusted_Connection = True; MultipleActiveResultSets = true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ExpoSoftwareN;Trusted_Connection = True; MultipleActiveResultSets = true"
 
   }
 }
