--- a/ExpoSoftware/appsettings.json
+++ b/ExpoSoftware/appsettings.json
@@ -13,7 +13,7 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=tcp:server-expo.database.windows.net,1433;Initial Catalog=ExpoSoftwareL;Persist Security Info=False;User ID=administrador;Password=Exposoftware2020;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ExpoSoftwareN;Trusted_Connection = True; MultipleActiveResultSets = true"
 
   }
 
